--- a/FirstForm/index.html
+++ b/FirstForm/index.html
@@ -6,5 +6,25 @@
   <body>
      <h1 id="title"> First Survey Form</h1>
      <p id="description">Fill this form as per required information</p>
+     <form id="survey-form">
+       <fieldset>
+       <label for="name">
+         Enter First Name :
+         <input id="name" type="text">
+       </label>
+       <label for="name">
+         Enter Last Name : 
+         <input id="name" type="text">
+       </label>
+       <label for="email">
+         Enter Email :
+         <input id="email" type="email">
+       </label>
+       <label for="num">
+         Enter Number :
+         <input id="num" type="number" max="10">
+       </label>
+       </fieldset>
+     </form>
   </body>
 </html>
