--- a/Accessibility/index.html
+++ b/Accessibility/index.html
@@ -1,3 +1,4 @@
+<!--this is code for learn accessibility-quiz--> 
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="freeCodeCamp Accessibility Quiz practice project" />
     <title>Accessibility Quiz</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="access.css" />
   </head>
   <body>
     <header>
