--- a/legal/index.html
+++ b/legal/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="legal.css">
-    </head>
-<body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style3011.css">
+    <title>Login Page</title>
+    <script>
+        // JavaScript function to set the selected language
+        function setLanguage(lang) {
+            // You can store the selected language in a cookie or session storage
+            // For simplicity, we'll just use a JavaScript variable here
+            let selectedLanguage = lang;
 
-<h2>HTML Image</h2>
+            // Redirect the user to the appropriate login page in the selected language
+            switch (selectedLanguage) {
+                case "english":
+                    window.location.href = "login_english.html";
+                    break;
+                case "hindi":
+                    window.location.href = "login_hindi.html";
+                    break;
+                case "gujarati":
+                    window.location.href = "login_gujarati.html";
+                    break;
+                default:
+                    // Redirect to a default login page or handle the error
+                    break;
+            }
+        }
+    </script>
+    
+</head>
+
+<body>
+    <div class="header">
 <img src="https://www.clipartkey.com/mpngs/m/216-2169405_coat-of-arms-of-india-png-image-national.png" alt="Trulli" width="75" height="50">
+
+    </div>
+    <h1>Welcome to our website</h1>
+    <p>Please select your preferred language:</p>
+    <button onclick="setLanguage('english')">English</button>
+    <button onclick="setLanguage('hindi')">Hindi</button>
+    <button onclick="setLanguage('gujarati')">Gujarati</button>
 
 </body>
 </html>
