--- a/legal/index.html
+++ b/legal/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style3011.css">
+    <link rel="stylesheet" href="legal.css">
     <title>Login Page</title>
     <script>
         // JavaScript function to set the selected language
