--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <h1><a href="cat photo app/index.html"/>cat</h1>
     <h1><a href="cafemenu/index.html"/>coffee</h1>
-    <h1><a href="cat photo app/index.html"/></a></h1>
+    <h1><a href="colourmarker/index.html"/></a></h1>
     <h1><a href="cat photo app/index.html"/></h1>
     <h1><a href="cat photo app/index.html"/></h1>
     <h1><a href="cat photo app/index.html"/></h1>
