--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 <body>
     
     <h1><a href="cat photo app/index.html"/>cat</h1>
-    <h1><a href="cafemenu/index.html"/>coffee</h1>
-    <h1><a href="colourmarker/index.html"/></a></h1>
-    <h1><a href="cat photo app/index.html"/></h1>
-    <h1><a href="cat photo app/index.html"/></h1>
-    <h1><a href="cat photo app/index.html"/></h1>
-    <h1><a href="cat photo app/index.html"/></h1>
-    <h1><a href="cat photo app/index.html"/></h1>
-    <h1><a href="cat photo app/index.html"/></h1>
-    <h1><a href="cat photo app/index.html"/></h1>
-    <h1><a href="cat photo app/index.html"/></h1>
+    <h1><a href="cafemenu/index.html"/>coffee</a></h1>
+    <h1><a href="colourmarker/index.html"/>color marker</a></h1>
+    <h1><a href="FirstForm/index.html"/></a></h1>
+    <h1><a href="FlexForm/index.html"/></a></h1>
+    <h1><a href="legal/index.html"/></a></h1>
+    <h1><a href="cat photo app/index.html"/></a></h1>
+    <h1><a href="cat photo app/index.html"/></a></h1>
+    <h1><a href="cat photo app/index.html"/></a></h1>
+    <h1><a href="cat photo app/index.html"/></a></h1>
+    <h1><a href="cat photo app/index.html"/></a></h1>
+    <h1><a href="cat photo app/index.html"/></a></h1>
+    <h1><a href="cat photo app/index.html"/></a></h1>
     <h1><a href="cat photo app/index.html"/></h1>
 </body>
 </html>
