--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
     <h1><a href="FirstForm/index.html"/></a></h1>
     <h1><a href="FlexForm/index.html"/></a></h1>
     <h1><a href="legal/index.html"/></a></h1>
-    <h1><a href="cat photo app/index.html"/></a></h1>
-    <h1><a href="cat photo app/index.html"/></a></h1>
-    <h1><a href="cat photo app/index.html"/></a></h1>
-    <h1><a href="cat photo app/index.html"/></a></h1>
-    <h1><a href="cat photo app/index.html"/></a></h1>
-    <h1><a href="cat photo app/index.html"/></a></h1>
-    <h1><a href="cat photo app/index.html"/></a></h1>
-    <h1><a href="cat photo app/index.html"/></h1>
+    <h1><a href="Nutratianlabel/index.html"/></a></h1>
+    <h1><a href="SurveyForm/index.html"/></a></h1>
+    <h1><a href="Tributepage/index.html"/></a></h1>
+    <h1><a href="BoxModel/index.html"/></a></h1>
+    <h1><a href="Balancesheet/index.html"/></a></h1>
+    <h1><a href="Accessibility/index.html"/></a></h1>
+    
 </body>
 </html>
