--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1><a href="cat photo app/index.html"/>cat</h1>
     <h1><a href="cafemenu/index.html"/>coffee</a></h1>
     <h1><a href="colourmarker/index.html"/>color marker</a></h1>
-    <h1><a href="FirstForm/index.html"/></a></h1>
-    <h1><a href="FlexForm/index.html"/></a></h1>
-    <h1><a href="legal/index.html"/></a></h1>
-    <h1><a href="Nutratianlabel/index.html"/></a></h1>
-    <h1><a href="SurveyForm/index.html"/></a></h1>
-    <h1><a href="Tributepage/index.html"/></a></h1>
-    <h1><a href="BoxModel/index.html"/></a></h1>
-    <h1><a href="Balancesheet/index.html"/></a></h1>
-    <h1><a href="Accessibility/index.html"/></a></h1>
+    <h1><a href="FirstForm/index.html"/>FirstForm</a></h1>
+    <h1><a href="FlexForm/index.html"/>FlexForm</a></h1>
+    <h1><a href="legal/index.html"/>Legal</a></h1>
+    <h1><a href="Nutratianlabel/index.html"/>Nutratianlabel</a></h1>
+    <h1><a href="SurveyForm/index.html"/>SurveyForm</a></h1>
+    <h1><a href="Tributepage/index.html"/>Tributepage</a></h1>
+    <h1><a href="BoxModel/index.html"/>BoxModel</a></h1>
+    <h1><a href="Balancesheet/index.html"/>Balancesheet</a></h1>
+    <h1><a href="Accessibility/index.html"/>Accessibility</a></h1>
     
 </body>
 </html>
