About Data Structure

--- a/technical_page/index.html
+++ b/technical_page/index.html
@@ -197,3 +197,121 @@ int isempty(){
       else
       return 0;
 }
+
+/* Check if the stack is full*/
+int isfull(){
+   if(top == MAXSIZE)
+      return 1;
+   else
+      return 0;
+}
+
+/* Function to delete from the stack */
+int pop(){
+   int data;
+   if(isempty()) {
+      printf("Stack Underflow");
+   } else {
+      data = stack[top];
+      top = top - 1;
+      return data;
+   }
+}
+
+/* Function to insert into the stack */
+int push(int data){
+   if(isfull()) {
+      printf("Could not insert data, Stack is full.\n");
+   } else {
+       top = top + 1;
+       stack[top] = data;
+   }
+   return 0;
+}
+
+/* Main function */
+int main(){
+   int i;
+   push(44);
+   push(10);
+   push(62);
+   push(123);
+   push(15);
+   
+   int data = pop();
+   printf("%d ",data);
+   }
+   return 0;
+}
+</code>
+
+<h3>3.DISPLAY Operation</h3>
+The display() operation prints all the elements present in the stack.
+This function is used to display elements of stack to the user.
+
+<b>**Algorithm</b> 
+
+<code>
+1.[Check if the stack is empty]
+   if top == -1 
+   then  write("Stack is empty")
+           return
+2.[print the elements of stack]
+   loop for i from 'top' to '0'
+      write("%d ", S[i])  
+</code>
+<b>**Code</b>
+
+<code>
+#include stdio.h
+int MAXSIZE = 8;
+int stack[8];
+int top = -1;
+
+/* Check if the stack is full */
+int isfull(){
+   if(top == MAXSIZE)
+      return 1;
+   else
+      return 0;
+}
+
+/* Function to display elements in the stack */
+void display(){
+   if (top == -1){
+       printf("stack is empty");
+       return;
+        } 
+   for (int i=top; i>=0; i--){
+       printf("%d ", stack[i]);
+   }
+}
+
+/* Function to insert into the stack */
+int push(int data){
+   if(isfull()) {
+      printf("Could not insert data, Stack is full.\n");
+   } else {
+      top = top + 1;
+      stack[top] = data;
+   }
+}
+
+/* Main function */
+int main(){
+   int i;
+   push(10);
+   push(44);
+   push(62);
+
+   display();
+   return 0;
+}
+</code>
+
+        </pre>
+        </section>
+      
+    </main>
+  </body>
+</html>
