--- a/technical_page/index.html
+++ b/technical_page/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Data Structure</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="technical.css">
   </head>
   <body>
     <main id ="main-doc">
