--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -7,7 +7,7 @@
     <title>Product Landing Page</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
  
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="land.css">
 </head>
 <body>
     <div id="page-wrapper">
@@ -138,4 +138,4 @@
         </div>
       </div>
 </body>
-</html>l
+</html>
